@@ -1,3 +1,5 @@
+Feb 08, 2022: libarchive 3.5.3 released
+
 Aug 22, 2021: libarchive 3.5.2 released
 
 Dec 26, 2020: libarchive 3.5.1 released
